tests/cfg/js/success/cfg_return5.js
var x;
function f() {
    return;
    x = "B";
}

f();
