tests/cfg/js/error/astRewrite/ast_disamb11.js
lab: {
    var f = function () { continue lab; }
}
